# detent-sdk-python

./: README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/detent/: __init__.py  _config.py  _core.py  async_client.py  client.py  errors.py  models.py
tests/: test_async_client.py  test_client.py  test_contract.py  test_core.py  test_integration.py  test_models.py  test_smoke.py
