[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "detent-sdk"
version = "0.1.0"
description = "Typed Python client for the Detent rate-limiting API."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["rate-limit", "rate-limiter", "detent", "sdk", "api-client"]
dependencies = ["httpx>=0.27"]

[[project.authors]]
name = "Cyril GUILLERMINET"

[project.urls]
Homepage = "https://github.com/cguillerminet/detent-sdk-python"
Issues = "https://github.com/cguillerminet/detent-sdk-python/issues"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.5", "mypy>=1.10"]

[tool.hatch.build.targets.wheel]
packages = ["src/detent"]

[tool.hatch.build.targets.sdist]
# Keep the source dist to the package + its tests/contract snapshot; never
# ship the internal SDD review scaffolding (git-excluded, but hatchling globs).
exclude = ["/.sdd"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
